backtrack: increased history-size to 10 (and fixed few warnings)